--- a/css/styles.css
+++ b/css/styles.css
@@ -145,9 +145,11 @@ html {
   flex-wrap: wrap;
   margin-right: -30px;
   margin-top: -30px;
+
 }
 .project-card {
   margin-right: 30px;
+  flex-basis: calc((100% - 3 * 30px) / 3);
 }
 .project-card {
   margin-top: 30px;
@@ -170,8 +172,11 @@ html {
   border-right: 1px solid var(--border-card-color);
   border-bottom: 1px solid var(--border-card-color);
 }
-.project-list-hover:hover .project-text-wrapper,
-.project-list-hover:focus .project-text-wrapper {
+.project-list-hover{
+  display: block;
+}
+.project-list-hover:hover,
+.project-list-hover:focus{
   border: 1px solid var(--border-card-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -216,7 +221,8 @@ html {
   letter-spacing: 0.02em;
   margin-left: auto;
   display: flex;
-  align-items: baseline;
+  align-items: center;
+  justify-content: center;
 }
 .contacts-number {
   margin-left: 30px;
@@ -228,7 +234,7 @@ html {
 .contacts {
   color: var(--secondary-text-color);
   fill: var(--secondary-text-color);
-  display: block;
+  display: flex;
 }
 .contacts:hover,
 .contacts:focus {
