--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,6 @@ html {
 }
 .header-conteiner {
   padding-top: 24px;
-  padding-bottom: 24px;
   display: flex;
   align-items: center;
 }
@@ -115,6 +114,8 @@ html {
   letter-spacing: 0.06em;
   color: var(--btn-focus-color-text);
   background-color: var(--accent-color);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 .btn-portfolio {
   font-family: inherit;
@@ -126,6 +127,7 @@ html {
   background: var(--btn-portfolio-background-color);
   border-radius: 4px;
   padding: 6px 22px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-portfolio:hover,
 .btn-portfolio:focus {
@@ -154,6 +156,26 @@ html {
 .project-card {
   margin-top: 30px;
 }
+.project-wrapper{
+  position: relative;
+  overflow: hidden;
+}
+.overlay-projects {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.5;
+  color: var(--hero-color-text);
+  background-color: var(--accent-color);
+  opacity: 90%;
+  overflow: auto;
+  transform: translateY(101%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .modal-btn:hover,
 .modal-btn:focus {
   color: var(--btn-focus-color-text);
@@ -174,6 +196,11 @@ html {
 }
 .project-list-hover{
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),color 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project-list-hover:hover .overlay-projects,
+.project-list-hover:focus .overlay-projects {
+ transform: translateY(0);
 }
 .project-list-hover:hover,
 .project-list-hover:focus{
@@ -205,14 +232,29 @@ html {
   margin-right: 30px;
 }
 .nav-list-link {
+  position: relative;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--btn-main-color-text);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-list-link:hover,
 .nav-list-link:focus {
   color: var(--accent-color);
+}
+.nav-list-link.current::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--accent-color);
 }
 .contact-number {
   font-weight: 500;
@@ -236,6 +278,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts:hover,
 .contacts:focus {
@@ -318,6 +361,7 @@ html {
   background-color: var(--btn-focus-color-text);
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-link:hover .social-list-icon,
 .social-list-link:focus .social-list-icon {
@@ -328,11 +372,31 @@ html {
   background-color: var(--accent-color);
 }
 .social-list-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--accent-social-icon-color);
 }
 .work-section {
   display: flex;
   justify-content: space-between;
+}
+.especially-photo{
+  position: relative;
+  overflow: hidden;
+}
+.overlay{
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  width: 370px;
+  height: 70px;
+  color: var(--hero-color-text);
+  background-color: var(--hero-background-color);
+   opacity: 0.8;
 }
 .employers-section {
   display: flex;
@@ -395,6 +459,8 @@ html {
   border-radius: 4px;
 }
 .our-client-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 16px 32px;
   fill: var(--accent-social-icon-color);
   border: 1px solid #afb1b8;
@@ -474,10 +540,51 @@ html {
   background-color: rgba(255, 255, 255, 0.1);
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-icon-footer {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--footer-color-adress-text);
 }
 .current{
   color: var(--accent-color);
+}
+/* Modal icon */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 580px;
+  background-color: var(--hero-color-text);
+}
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 30px;
+  padding: 0;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  cursor: pointer;
+}
+.is-hidden{
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
